Fix spacing after highlight section (#371)

--- a/www/assets/css/main.scss
+++ b/www/assets/css/main.scss
@@ -111,3 +111,7 @@ article {
 .language-plaintext .highlight {
   @extend .mb-0;
 }
+
+.highlighter-rouge {
+  margin-bottom: $paragraph-margin-bottom;
+}
